Refactor : 게시물 목록 관련 수정